[package]
name = "relay"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
serde_json = "1"
toml = "0.8"
 
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
